@@ -1,9 +1,26 @@
 #!/bin/bash
 
-version=1.0.0
-prefix="${1:-/usr/local/cbc/$version}"
+prefix="${1:-/usr/local/cbc}"
+BINS="bin/cbc"
+LIBS="lib/cbc.jar lib/libcbc.a"
 
-invoke() {
+main()
+{
+    if ! [ -f lib/cbc.jar && -f lib/libcbc.a ]
+    then
+        echo "lib/cbc.jar and lib/libcbc.a do not exist.  Build it first" 1>&2
+        exit 1
+    fi
+    echo "prefix=$prefix"
+    invoke mkdir -p "$prefix/bin"
+    invoke cp $BINS "$prefix/bin"
+    invoke mkdir -p "$prefix/lib"
+    invoke cp $LIBS "$prefix/lib"
+    echo "cbc successfully installed as $prefix/bin/cbc"
+}
+
+invoke()
+{
     echo "$@"
     if ! "$@"
     then
@@ -12,10 +29,4 @@ invoke() {
     fi
 }
 
-echo "version=$version"
-echo "prefix=$prefix"
-invoke mkdir -p "$prefix/bin"
-invoke cp bin/cbc "$prefix/bin
-invoke mkdir -p "$prefix/lib"
-invoke cp cbc.jar lib/libcbc.o "$prefix/lib"
-echo "cbc successfully installed as $prefix/bin/cbc"
+main "$@"
