@@ -1,3 +1,9 @@
+Tue Sep 16 03:53:07 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* install.sh: check if jar and libcbc are built.
+
+	* install.sh: fix syntax error.
+
 Tue Sep 16 03:42:43 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/TypeChecker.java: reject statements
